--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,33 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: flex-end;
+  background-image: url("https://i.ibb.co/KGCpLvB/League-Of-Legends.png");
+  background-repeat: no-repeat;
+  /* height: 100vh; */
+  background-size: contain;
+}
+
+.middle-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  /* background-color: wheat; */
+}
+
+.middle-middle-box {
+  display: flex;
+  justify-content: center;
+  padding-left: .5px;
+  height: 448.5px;
+  width: 796.5px;
+  /* background-color: burlywood; */
+} 
+
+.to-do-title {
+  margin-top: 50px;
+  color: white;
+  text-decoration: underline;
 }
 
 .App-logo {
@@ -27,6 +55,23 @@
 .App-link {
   color: #61dafb;
 }
+
+.shortcut-container {
+  padding-left: 1px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: space-evenly; */
+  height: 100vh;
+  width: 82.5px;
+  background-color: black;
+}
+
+.button-container button{
+  width: 81.5px;
+}
+
+
 
 @keyframes App-logo-spin {
   from {
