--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,31 @@
 .App {
   display: flex;
   justify-content: flex-end;
-  background-image: url("https://i.ibb.co/KGCpLvB/League-Of-Legends.png");
-  background-repeat: no-repeat;
-  /* height: 100vh; */
-  background-size: contain;
+  
+  
+  
 }
 
 .middle-box {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
   width: 100%;
   /* background-color: wheat; */
+  background-image: url("https://i.ibb.co/54tnWYn/d1de05fd1cb0f0e30cd0024ba7986869aekufhvckjajbd.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* background-color: aquamarine; */
+  /* opacity: 0; */
 }
 
 .middle-middle-box {
   display: flex;
   justify-content: center;
   padding-left: .5px;
-  height: 448.5px;
-  width: 796.5px;
+  /* height: 448.5px; */
+  /* width: 796.5px; */
   /* background-color: burlywood; */
 } 
 
@@ -30,54 +35,30 @@
   text-decoration: underline;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 .shortcut-container {
-  padding-left: 1px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: space-evenly; */
-  height: 100vh;
-  width: 82.5px;
-  background-color: black;
+  /* height: fit-content; */
+  width: 15%;
+  padding-left: 1px;
+  background-color: rgb(37, 0, 22);
+  /* opacity: .90; */
 }
+
+
 
 .button-container button{
-  width: 81.5px;
+  width: 100%;
+  height: 20%;
+  max-height: 10vh;
+  color: black;
+  background-color: rgb(197, 218, 7);
 }
 
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media(max-width: 1200px) {
+   
+  .button-container button{
+    height: 15%;
   }
 }
