--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   display: flex;
   justify-content: flex-end;
-  
+  /* border: 2px solid black; */
   
   
 }
@@ -23,7 +23,8 @@
 .middle-middle-box {
   display: flex;
   justify-content: center;
-  padding-left: .5px;
+  align-items: center;
+  max-height: 90vh;
   /* height: 448.5px; */
   /* width: 796.5px; */
   /* background-color: burlywood; */
@@ -41,6 +42,7 @@
   align-items: center;
   /* height: fit-content; */
   width: 15%;
+  /* max-width: 15%; */
   padding-left: 1px;
   background-color: rgb(37, 0, 22);
   /* opacity: .90; */
@@ -52,6 +54,7 @@
   width: 100%;
   height: 20%;
   max-height: 10vh;
+  max-width: 14vw;
   color: black;
   background-color: rgb(197, 218, 7);
 }
